# estate-agent

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  go.mod  pyproject.toml
.github/workflows/: ci.yml
cmd/estate-agent/: main.go
docs/: architecture.md  evals.md  mvp-plan.md
examples/: error-payload.json
infra/aws/: README.md
infra/azure/: README.md
infra/gcp/: README.md
internal/app/: server.go  server_test.go
internal/config/: config.go  config_test.go
internal/evals/: eval.go  eval_test.go
internal/intake/: error.go  error_test.go  github.go  github_test.go
internal/llm/: openrouter.go  openrouter_test.go
internal/security/: github.go  github_test.go
internal/work/: work.go  work_test.go
scripts/: verify.sh
src/estate_agent/: __init__.py  __main__.py  agent.py  config.py  github_client.py  models.py  router.py  security.py  server.py  state.py
tests/: test_router.py  test_security.py
