[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "estate-agent"
version = "0.1.0"
description = "Autonomous software estate steward for GitHub issues, production errors, and guarded agentic delivery."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Jonathan Popham" }]
license = "MIT"
keywords = ["ai", "agents", "github", "devops", "sdlc", "automation"]
dependencies = []

[project.optional-dependencies]
server = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
estate-agent = "estate_agent.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/estate_agent"]

